MAPPTDESK-2 : Enhance template and messages

--- a/src/java/fr/paris/lutece/plugins/appointment/modules/desk/resources/desk_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/appointment/modules/desk/resources/desk_messages_fr.properties
@@ -21,6 +21,9 @@ manage_appointmentdesks.columnDay=Day
 manage_appointmentdesks.columnDeskNumber=Desk number
 manage_appointmentdesks.columnStartCloding=Start cloding
 manage_appointmentdesks.columnEndClosing=End closing
+manage_appointmentdesks.commment=Commentaire du
+manage_appointmentdesks.addCommment=Ajouter un commentaire
+
 create_appointmentdesk.pageTitle=AppointmentDesk
 create_appointmentdesk.title=Cr\u00e9ation d'un AppointmentDesk
 create_appointmentdesk.labelIdForm=Id form
@@ -45,6 +48,7 @@ modify_appointmentdesk.labelStartCloding=Start cloding
 modify_appointmentdesk.labelStartCloding.help=Start cloding (texte d'aide)
 modify_appointmentdesk.labelEndClosing=End closing
 modify_appointmentdesk.labelEndClosing.help=End closing (texte d'aide)
+
 
 message.confirmRemoveAppointmentDesk=Etes vous sur de vouloir supprimer ce AppointmentDesk ?
 
