MAPPTDESK-2: add the possibility of modifying the capacity of a slot

--- a/src/java/fr/paris/lutece/plugins/appointment/modules/desk/resources/desk_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/appointment/modules/desk/resources/desk_messages_fr.properties
@@ -70,3 +70,6 @@ info.appointmentdesk.created=AppointmentDesk cr\u00e9\u00e9
 info.appointmentdesk.updated=AppointmentDesk modifi\u00e9
 info.appointmentdesk.removed=AppointmentDesk supprim\u00e9
 
+error.parsing.json= Error parsing data
+error.access.denied=Acces refus\u00e9
+
