MAPPTDESK-2: add the possibility of modifying the capacity of a slots betwen two date

--- a/src/java/fr/paris/lutece/plugins/appointment/modules/desk/resources/desk_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/appointment/modules/desk/resources/desk_messages_fr.properties
@@ -73,3 +73,17 @@ info.appointmentdesk.removed=AppointmentDesk supprim\u00e9
 error.parsing.json= Error parsing data
 error.access.denied=Acces refus\u00e9
 
+increment.defaultTitle=Ajout d'un guichet
+increment.labelIncrementingValue=Nb guichets
+increment.labelType=Type
+increment.labelStartingDate=Du
+increment.labelEndingDate=Au
+increment.labelStartingTime=Heure debut
+increment.labelEndingTime=Heure fin
+increment.labelValidate=Valider
+
+lace=Dentelle
+halftimemorning=Mi-temps matin
+halftimeafternoon=Mi-temps soir
+fulltime=Temps plein
+
