MAPPTDESK-2 : Improve module messages

--- a/src/java/fr/paris/lutece/plugins/appointment/modules/desk/resources/desk_messages_fr.properties
+++ b/src/java/fr/paris/lutece/plugins/appointment/modules/desk/resources/desk_messages_fr.properties
@@ -1,70 +1,82 @@
 # Plugin's keys
-plugin.provider=null
-plugin.description=null
+plugin.provider=Mairie de Paris
+plugin.description=Gestion des rendez-vous - Vue jour
 
 
 # Admin features keys
 
-adminFeature.ManageAppointmentDesk.name=Manage Appointment Desk
-adminFeature.ManageAppointmentDesk.description=Manage Appointment Desk
-
+adminFeature.ManageAppointmentDesk.name=Gestion des rendez-vous - Vue jour
+adminFeature.ManageAppointmentDesk.description=Gestion des rendez-vous - Vue jour
 
 # Business classes keys
-
-
 # keys for business classes keys : AppointmentDesk
-manage_appointmentdesks.pageTitle=AppointmentDesk
-manage_appointmentdesks.title=Liste des AppointmentDesks
-manage_appointmentdesks.buttonAdd=Ajouter un AppointmentDesk
-manage_appointmentdesks.columnIdForm=Id form
-manage_appointmentdesks.columnDay=Day
-manage_appointmentdesks.columnDeskNumber=Desk number
-manage_appointmentdesks.columnStartCloding=Start cloding
-manage_appointmentdesks.columnEndClosing=End closing
+manage_appointmentdesks.pageTitle=Rendez-vous - Vue jour
+manage_appointmentdesks.title=Liste des guichets
+manage_appointmentdesks.buttonAdd=Ajouter un guichet
+manage_appointmentdesks.columnIdForm=Identifiant du formulaire
+manage_appointmentdesks.columnDay=Jour
+manage_appointmentdesks.columnDeskNumber=Numéro de guichet
+manage_appointmentdesks.columnStartClosing=Début de la fermeture
+manage_appointmentdesks.columnEndClosing=Fin de la fermeture
 manage_appointmentdesks.commment=Commentaire du
 manage_appointmentdesks.addCommment=Ajouter un commentaire
+manage_appointmentdesks.addDesk=Ajouter un guichet
 
-create_appointmentdesk.pageTitle=AppointmentDesk
-create_appointmentdesk.title=Cr\u00e9ation d'un AppointmentDesk
-create_appointmentdesk.labelIdForm=Id form
-create_appointmentdesk.labelIdForm.help=Id form (texte d'aide)
-create_appointmentdesk.labelDay=Day
-create_appointmentdesk.labelDay.help=Day (texte d'aide)
-create_appointmentdesk.labelDeskNumber=Desk number
-create_appointmentdesk.labelDeskNumber.help=Desk number (texte d'aide)
-create_appointmentdesk.labelStartCloding=Start cloding
-create_appointmentdesk.labelStartCloding.help=Start cloding (texte d'aide)
-create_appointmentdesk.labelEndClosing=End closing
-create_appointmentdesk.labelEndClosing.help=End closing (texte d'aide)
-modify_appointmentdesk.pageTitle=AppointmentDesk
-modify_appointmentdesk.title=Modification d'un AppointmentDesk
-modify_appointmentdesk.labelIdForm=Id form
-modify_appointmentdesk.labelIdForm.help=Id form (texte d'aide)
-modify_appointmentdesk.labelDay=Day
-modify_appointmentdesk.labelDay.help=Day (texte d'aide)
-modify_appointmentdesk.labelDeskNumber=Desk number
-modify_appointmentdesk.labelDeskNumber.help=Desk number (texte d'aide)
-modify_appointmentdesk.labelStartCloding=Start cloding
-modify_appointmentdesk.labelStartCloding.help=Start cloding (texte d'aide)
-modify_appointmentdesk.labelEndClosing=End closing
-modify_appointmentdesk.labelEndClosing.help=End closing (texte d'aide)
+create_appointmentdesk.pageTitle=Rendez-vous - Vue jour
+create_appointmentdesk.title=Cr\u00e9ation d'un rendez-vous
+create_appointmentdesk.labelIdForm=Identifiant du formulaire
+create_appointmentdesk.labelIdForm.help=Identifiant du formulaire
+create_appointmentdesk.labelDay=Jour
+create_appointmentdesk.labelDay.help=Jour du rendez-vous
+create_appointmentdesk.labelDeskNumber=Numéro de guichet
+create_appointmentdesk.labelDeskNumber.help=Numéro de guichet
+create_appointmentdesk.labelStartClosing=Début de la fermeture
+create_appointmentdesk.labelStartClosing.help=Début de la fermeture
+create_appointmentdesk.labelEndClosing=Fin de la fermeture
+create_appointmentdesk.labelEndClosing.help=Fin de la fermeture
 
+modify_appointmentdesk.pageTitle=Rendez-vous - Vue jour
+modify_appointmentdesk.title=Modification d'un rendez-vous - Vue jour
+modify_appointmentdesk.labelIdForm=Identifiant du formulaire
+modify_appointmentdesk.labelIdForm.help=Identifiant du formulaire
+modify_appointmentdesk.labelDay=Jour
+modify_appointmentdesk.labelDay.help=Jour du rendez-vous
+modify_appointmentdesk.labelDeskNumber=Num\u00e9ro du guichet
+modify_appointmentdesk.labelDeskNumber.help=Num\u00e9ro du guichet
+modify_appointmentdesk.labelStartClosing=D\u00e9but de la fermeture
+modify_appointmentdesk.labelStartClosing.help=D\u00e9but de la fermeture
+modify_appointmentdesk.labelEndClosing=Fin de la fermeture
+modify_appointmentdesk.labelEndClosing.help=Fin de la fermeture
 
-message.confirmRemoveAppointmentDesk=Etes vous sur de vouloir supprimer ce AppointmentDesk ?
+message.confirmRemoveAppointmentDesk=Etes vous sur de vouloir supprimer ce rendez-vous ?
 
 # JSR 303 constraint validator messages
-validation.appointmentdesk.Day.notEmpty=Le champ Day ne doit pas \u00eatre vide. Veuillez le remplir SVP.
-validation.appointmentdesk.StartCloding.notEmpty=Le champ Start cloding ne doit pas \u00eatre vide. Veuillez le remplir SVP.
+validation.appointmentdesk.Day.notEmpty=Le champ jour ne doit pas \u00eatre vide. Veuillez le remplir SVP.
+validation.appointmentdesk.StartClosing.notEmpty=Le champ Start closing ne doit pas \u00eatre vide. Veuillez le remplir SVP.
 validation.appointmentdesk.EndClosing.notEmpty=Le champ End closing ne doit pas \u00eatre vide. Veuillez le remplir SVP.
 
 # model attributes for validation messages
 model.entity.appointmentdesk.attribute.idForm=Id form
 
-# Infos keys
+# Label Keys
+label.open=Ouvrir
+label.close=Fermer
+label.save=Valider
+label.cancel=Annuler
+label.today=Aujourd'hui
+label.chooseDate=Choisir une date
+label.prevDay=Jour pr\u00e9c\u00e9dent
+label.nextDay=Jour suivant
+label.addDesk=Ajouter un guichet
+label.addComment=Ajouter un commentaire
+label.surbooking=Surbooking
+label.desk=Guichet
+label.deskNo=N\u00B0
 
-info.appointmentdesk.created=AppointmentDesk cr\u00e9\u00e9
-info.appointmentdesk.updated=AppointmentDesk modifi\u00e9
-info.appointmentdesk.removed=AppointmentDesk supprim\u00e9
+# Infos keys
+info.appointmentdesk.created=rendez-vous cr\u00e9\u00e9
+info.appointmentdesk.updated=rendez-vous modifi\u00e9
+info.appointmentdesk.removed=rendez-vous supprim\u00e9
 
 error.parsing.json= Error parsing data
 error.access.denied=Acces refus\u00e9
@@ -74,8 +86,8 @@ increment.labelIncrementingValue=Nb guichets
 increment.labelType=Type
 increment.labelStartingDate=Du
 increment.labelEndingDate=Au
-increment.labelStartingTime=Heure debut
-increment.labelEndingTime=Heure fin
+increment.labelStartingTime=Heure de d\u00e9but
+increment.labelEndingTime=Heure de fin
 increment.labelValidate=Valider
 
 lace=Dentelle
